--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,110 @@
+amqp==5.3.1
 asgiref==3.9.1
+async-timeout==5.0.1
+attrs==25.3.0
+bcc==0.18.0
+beautifulsoup4==4.10.0
+billiard==4.2.1
+blinker==1.4
+Brlapi==0.8.3
+bs4==0.0.2
+celery==5.5.3
 certifi==2025.8.3
-charset-normalizer==3.4.3
+chardet==4.0.0
+chrome-gnome-shell==0.0.0
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+colorama==0.4.4
+command-not-found==0.3
+cryptography==3.4.8
+cupshelpers==1.0
+dbus-python==1.2.18
+defer==1.0.6
+distro==1.7.0
 Django==5.2.5
-idna==3.10
+evdev==1.4.0
+exceptiongroup==1.3.0
+h11==0.16.0
+hidpidaemon==18.4.6
+html5lib==1.1
+httplib2==0.20.2
+idna==3.3
+importlib-metadata==4.6.4
+jeepney==0.7.1
+kernelstub==3.1.4
+keyring==23.5.0
+kombu==5.5.4
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+louis==3.20.0
+lxml==4.8.0
+macaroonbakery==1.3.1
+more-itertools==8.10.0
+mpmath==1.3.0
+netaddr==0.8.0
+netifaces==0.11.0
 numpy==2.2.6
+oauthlib==3.2.0
+olefile==0.46
+outcome==1.3.0.post0
+packaging==25.0
 pandas==2.3.1
+Pillow==9.0.1
+pop-transition==1.1.2
+prompt_toolkit==3.0.52
+protobuf==3.12.4
+pycairo==1.20.1
+pycups==2.0.1
+pydbus==0.6.0
+PyGObject==3.42.1
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyparsing==2.4.7
+pyRFC3339==1.1
+PySocks==1.7.1
+python-apt==2.4.0+ubuntu4
 python-dateutil==2.9.0.post0
-pytz==2025.2
-requests==2.32.4
-six==1.17.0
+python-debian==0.1.43+ubuntu1.1
+python-gnupg==0.4.8
+python-magic==0.4.24
+python-xlib==0.29
+pytz==2022.1
+pyxdg==0.27
+PyYAML==5.4.1
+redis==5.2.1
+repolib==2.2.1
+repoman==1.4.0
+requests==2.25.1
+screen-resolution-extra==0.0.0
+SecretStorage==3.3.1
+selenium==4.35.0
+sessioninstaller==0.0.0
+setproctitle==1.2.2
+six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.3.1
 sqlparse==0.5.3
+sympy==1.14.0
+systemd-python==234
+trio==0.30.0
+trio-websocket==0.12.2
 typing_extensions==4.14.1
 tzdata==2025.2
+ubuntu-drivers-common==0.0.0
+ufw==0.36.1
 urllib3==2.5.0
+vine==5.1.0
+wadllib==1.3.6
+wcwidth==0.2.13
+webencodings==0.5.1
+websocket-client==1.8.0
+wsproto==1.2.0
+xdg==5
+xkit==0.0.0
+zipp==1.0.0
